WindGroup Dev/src/objects/Exchange_Rate__c.object
<CustomObject>
    <description>This is used to track Exchange Rate for Multi-Currency process</description>
    <fields>
        <fullName>Applicable_Function__c</fullName>
        <description>Lease - Applicable Charge, Lease Charge, Rent Schedule, Rent Roll, Rent Roll Details, Invoice, Invoice Line Items
Cash Receipt - Cash Receipt &amp; Cash Details
Accounts Posting - TBD
Default - If the value is not found in case 1 &amp; 2 (either no record or no date range), then get this value

Lease
Cash Receipt
Accounts Posting
Default</description>
        <label>Applicable Function</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <description>This field is refered n Backend Populate Duplicate_Check Workflow</description>
        <inlineHelpText>This field is refered n Backend Populate Duplicate_Check Workflow</inlineHelpText>
        <label>Duplicate Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Applicable_Function__c</columns>
        <columns>Conversion_Rate__c</columns>
        <columns>Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllUSD</fullName>
        <columns>NAME</columns>
        <columns>Currency_Code__c</columns>
        <columns>Applicable_Function__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Conversion_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Currency_Code__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>All USD</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-ER-{000000}</displayFormat>
        <label>Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>